# quizzinfinity

./: .gitignore  AGENTS.md  README.md  SPEC.md  TESTS.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  services.py
app/static/: app.js  index.html  styles.css
tests/: test_app.py  test_openai_live.py  test_services.py
